[project]
name = "ai-agent-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.0",
    "jupyterlab>=4.5.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.8",
    "openai>=2.32.0",
    "openai-agents>=0.14.2",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
]
